Update Module 2 notebook with enhanced formatting and content clarity. Revised section titles and descriptions for better organization, including a new evaluation system overview. Improved visual elements and structured feedback sections to facilitate user understanding of prompt evaluation processes. Adjusted markdown formatting for consistency across activities, ensuring a cohesive learning experience.

--- a/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
+++ b/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Section 2.5: Hands-On Practice"
+   "source": [
+    "# Section 2.5: Hands-On Practice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,30 +66,106 @@
     "\n",
     "---\n",
     "\n",
-    "## 🤖 Understanding the Evaluation System\n",
+    "## 🤖 How Your Prompts Are Scored\n",
     "\n",
-    "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
-    "<strong>✨ AI-Powered Assessment</strong><br><br>\n",
-    "Before you start, understand how the <code style=\"font-family: Consolas, 'courier new'; color: #dc2626; background-color: #f1f1f1; padding: 2px 4px; border-radius: 3px; font-size: 110%;\">evaluate_prompt()</code> function works. It will analyze your prompts and provide instant feedback!\n",
+    "<div style=\"background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px; border-radius: 10px; text-align: center; margin-bottom: 20px;\">\n",
+    "<h3 style=\"margin: 0; color: white;\">Evaluation System Overview</h3>\n",
     "</div>\n",
     "\n",
-    "**How it works:**\n",
-    "1. Complete an activity below\n",
-    "2. Write your prompt in the `messages` variable\n",
-    "3. Run your code to test it works\n",
-    "4. Uncomment and run the evaluation cell\n",
-    "5. Get detailed feedback on which tactics you successfully applied\n",
-    "6. Check off skills you've mastered (score ≥ 80)\n",
+    "<div style=\"background: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 20px;\">\n",
     "\n",
-    "**What the evaluator checks:**\n",
-    "- ✅ Did you use the required tactics correctly?\n",
-    "- ✅ Is your prompt structure clear and well-organized?\n",
-    "- ✅ Are all necessary components present (roles, XML tags, examples, etc.)?\n",
-    "- ✅ Overall prompt quality score out of 100\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">1</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Write your prompt</strong> using required tactics\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
     "\n",
-    "<div style=\"padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b; color:#78350f;\">\n",
-    "<strong>💡 Tip:</strong><br><br>\n",
-    "Don't worry about getting perfect scores on the first try! The evaluation helps you learn. If you score below 80, review the feedback, adjust your prompt, and try again.\n",
+    "<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n",
+    "\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">2</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Run evaluation</strong> - two methods analyze your work\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<table style=\"width: 100%; margin: 20px 0; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50%; padding-right: 10px; border: none;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-left: 4px solid #f59e0b;\">\n",
+    "<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #78350f;\">\n",
+    "📏 Structure Check\n",
+    "<span style=\"font-size: 13px; font-weight: 600; background: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">40%</span>\n",
+    "</div>\n",
+    "<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #78350f;\">\n",
+    "Automated checks:<br>\n",
+    "- System message?<br>\n",
+    "- XML tags?<br>\n",
+    "- Role indicators?<br>\n",
+    "- Examples present?\n",
+    "</div>\n",
+    "</div>\n",
+    "</td>\n",
+    "<td style=\"width: 50%; padding-left: 10px; border: none;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%); border-left: 4px solid #3b82f6;\">\n",
+    "<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #1e40af;\">\n",
+    "🤖 Quality Judge\n",
+    "<span style=\"font-size: 13px; font-weight: 600; background: #3b82f6; color: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">60%</span>\n",
+    "</div>\n",
+    "<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #1e40af;\">\n",
+    "AI evaluates:<br>\n",
+    "- How well tactics used?<br>\n",
+    "- Clear & effective?<br>\n",
+    "- Quality of examples?<br>\n",
+    "- Overall excellence?\n",
+    "</div>\n",
+    "</div>\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<div style=\"background: #f1f5f9; padding: 15px; border-radius: 8px; text-align: center; margin: 20px 0; border: 2px dashed #94a3b8;\">\n",
+    "<div style=\"font-size: 13px; color: #64748b; margin-bottom: 5px;\">Final Score</div>\n",
+    "<div style=\"font-family: 'Courier New', monospace; font-size: 16px; font-weight: 600; color: #1e293b;\">\n",
+    "(Structure × 0.4) + (Quality × 0.6)\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n",
+    "\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">3</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Get feedback</strong> and improve if needed\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background: #ecfdf5; border: 2px solid #10b981; padding: 15px; border-radius: 8px; text-align: center; font-size: 18px; font-weight: 700; color: #065f46; margin-bottom: 15px;\">\n",
+    "Pass with score\n",
+    "<div style=\"font-size: 32px; color: #10b981; margin: 5px 0;\">≥ 80</div>\n",
+    "to unlock skills!\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background: #fef3c7; padding: 15px; border-radius: 8px; border-left: 4px solid #f59e0b;\">\n",
+    "<div style=\"font-weight: 700; color: #78350f; margin-bottom: 5px;\">💡 Quick Tip</div>\n",
+    "<div style=\"font-size: 14px; color: #78350f;\">\n",
+    "Score below 80? Read the feedback, adjust your prompt, and try again. Focus on the quality assessment—it shows exactly what to improve!\n",
+    "</div>\n",
     "</div>\n",
     "\n",
     "---"
@@ -105,8 +183,22 @@
   },
   {
    "cell_type": "markdown",
-   "source": "### Activity 2.1: Role Prompting & Structured Inputs\n\n**Goal:** Combine role prompting with XML delimiters to organize multi-file code analysis.\n\n<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n<strong>📝 Success Criteria:</strong><br><br>\nYour prompt should include:\n<ul>\n<li>System message with QA Engineer role</li>\n<li>XML tags like &lt;test_file&gt; and &lt;source_code&gt; to separate inputs</li>\n<li>Clear request for test coverage analysis</li>\n</ul>\n</div>",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "### Activity 2.1: Role Prompting & Structured Inputs\n",
+    "\n",
+    "**Goal:** Combine role prompting with XML delimiters to organize multi-file code analysis.\n",
+    "\n",
+    "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
+    "<strong>📝 Success Criteria:</strong><br><br>\n",
+    "Your prompt should include:\n",
+    "<ul>\n",
+    "<li>System message with QA Engineer role</li>\n",
+    "<li>XML tags like &lt;test_file&gt; and &lt;source_code&gt; to separate inputs</li>\n",
+    "<li>Clear request for test coverage analysis</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
@@ -168,11 +260,11 @@
     "# ✅ EVALUATE YOUR ACTIVITY 2.1 SOLUTION\n",
     "# Uncomment after completing your prompt above\n",
     "\n",
-    "# evaluate_prompt(\n",
-    "#     messages=messages,  # Use the variable name from your solution\n",
-    "#     activity_name=\"Activity 2.1: Role Prompting & Structured Inputs\",\n",
-    "#     expected_tactics=[\"Role Prompting\", \"Structured Inputs\"]\n",
-    "# )\n",
+    "print(evaluate_prompt(\n",
+    "    messages=messages,  # Use the variable name from your solution\n",
+    "    activity_name=\"Activity 2.1: Role Prompting & Structured Inputs\",\n",
+    "    expected_tactics=[\"Role Prompting\", \"Structured Inputs\"]\n",
+    "))\n",
     "\n",
     "# 🎯 SKILLS YOU CAN CHECK OFF IF SCORE >= 80:\n",
     "# ✅ Skill #1: I can create effective software engineering personas\n",
@@ -184,7 +276,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "### Activity 2.2: Few-Shot Examples & Chain-of-Thought\n\n**Goal:** Use examples to teach AI your coding style, then apply chain-of-thought for systematic analysis.\n\n<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n<strong>📝 Success Criteria:</strong><br><br>\nYour prompt should include:\n<ul>\n<li>2-3 few-shot examples showing your error message style</li>\n<li>Instructions for step-by-step reasoning</li>\n<li>Request to apply the learned style to new function</li>\n</ul>\n</div>"
+   "source": [
+    "---\n",
+    "### Activity 2.2: Few-Shot Examples & Chain-of-Thought\n",
+    "\n",
+    "**Goal:** Use examples to teach AI your coding style, then apply chain-of-thought for systematic analysis.\n",
+    "\n",
+    "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
+    "<strong>📝 Success Criteria:</strong><br><br>\n",
+    "Your prompt should include:\n",
+    "<ul>\n",
+    "<li>2-3 few-shot examples showing your error message style</li>\n",
+    "<li>Instructions for step-by-step reasoning</li>\n",
+    "<li>Request to apply the learned style to new function</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
@@ -236,11 +343,11 @@
     "# ✅ EVALUATE YOUR ACTIVITY 2.2 SOLUTION\n",
     "# Uncomment after completing your prompt above\n",
     "\n",
-    "# evaluate_prompt(\n",
+    "# print(evaluate_prompt(\n",
     "#     messages=messages,  # Use the variable name from your solution\n",
     "#     activity_name=\"Activity 2.2: Few-Shot Examples & Chain-of-Thought\",\n",
     "#     expected_tactics=[\"Few-Shot Examples\", \"Chain-of-Thought\"]\n",
-    "# )\n",
+    "# ))\n",
     "\n",
     "# 🎯 SKILLS YOU CAN CHECK OFF IF SCORE >= 80:\n",
     "# ✅ Skill #5: I can create few-shot examples to establish consistent response styles\n",
@@ -252,7 +359,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "### Activity 2.3: Reference Citations and Prompt Chaining\n\n**Goal:** Build a 2-step chain that extracts quotes from documentation, then generates code using those quotes.\n\n<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n<strong>📝 Success Criteria:</strong><br><br>\nYour solution should have:\n<ul>\n<li>Step 1 prompt that extracts quotes from documentation</li>\n<li>Step 2 prompt that uses Step 1 output to generate code</li>\n<li>Clear XML structure for the documentation</li>\n</ul>\n</div>"
+   "source": [
+    "---\n",
+    "### Activity 2.3: Reference Citations and Prompt Chaining\n",
+    "\n",
+    "**Goal:** Build a 2-step chain that extracts quotes from documentation, then generates code using those quotes.\n",
+    "\n",
+    "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
+    "<strong>📝 Success Criteria:</strong><br><br>\n",
+    "Your solution should have:\n",
+    "<ul>\n",
+    "<li>Step 1 prompt that extracts quotes from documentation</li>\n",
+    "<li>Step 2 prompt that uses Step 1 output to generate code</li>\n",
+    "<li>Clear XML structure for the documentation</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
@@ -329,18 +451,18 @@
     "# Uncomment after completing both steps above\n",
     "\n",
     "# STEP 1 Evaluation (Reference Citations)\n",
-    "# evaluate_prompt(\n",
+    "# print(evaluate_prompt(\n",
     "#     messages=step1_messages,\n",
     "#     activity_name=\"Activity 2.3 Step 1: Reference Citations\",\n",
     "#     expected_tactics=[\"Reference Citations\"]\n",
-    "# )\n",
+    "# ))\n",
     "\n",
     "# STEP 2 Evaluation (Prompt Chaining)\n",
-    "# evaluate_prompt(\n",
+    "# print(evaluate_prompt(\n",
     "#     messages=step2_messages,\n",
     "#     activity_name=\"Activity 2.3 Step 2: Prompt Chaining\",\n",
     "#     expected_tactics=[\"Prompt Chaining\"]\n",
-    "# )\n",
+    "# ))\n",
     "\n",
     "# 🎯 SKILLS YOU CAN CHECK OFF IF BOTH STEPS SCORE >= 80:\n",
     "# ✅ Skill #9: I can structure multi-document prompts with proper XML tags\n",
@@ -352,7 +474,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "### Activity 2.4: LLM-as-Judge & Inner Monologue\n\n**Goal:** Create a 3-step self-improvement loop with clean final output.\n\n<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n<strong>📝 Success Criteria:</strong><br><br>\nYour solution should have:\n<ul>\n<li>Step 1: Initial code generation</li>\n<li>Step 2: Critique with weighted rubric (e.g., Security 40%, Correctness 30%, Quality 30%)</li>\n<li>Step 3: Improved code with &lt;thinking&gt; and &lt;output&gt; tags</li>\n</ul>\n</div>"
+   "source": [
+    "---\n",
+    "### Activity 2.4: LLM-as-Judge & Inner Monologue\n",
+    "\n",
+    "**Goal:** Create a 3-step self-improvement loop with clean final output.\n",
+    "\n",
+    "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
+    "<strong>📝 Success Criteria:</strong><br><br>\n",
+    "Your solution should have:\n",
+    "<ul>\n",
+    "<li>Step 1: Initial code generation</li>\n",
+    "<li>Step 2: Critique with weighted rubric (e.g., Security 40%, Correctness 30%, Quality 30%)</li>\n",
+    "<li>Step 3: Improved code with &lt;thinking&gt; and &lt;output&gt; tags</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
@@ -427,18 +564,18 @@
     "# Uncomment after completing all three steps above\n",
     "\n",
     "# STEP 2 Evaluation (LLM-as-Judge)\n",
-    "# evaluate_prompt(\n",
+    "# print(evaluate_prompt(\n",
     "#     messages=step2_messages,\n",
     "#     activity_name=\"Activity 2.4 Step 2: LLM-as-Judge\",\n",
     "#     expected_tactics=[\"LLM-as-Judge\"]\n",
-    "# )\n",
+    "# ))\n",
     "\n",
     "# STEP 3 Evaluation (Inner Monologue)\n",
-    "# evaluate_prompt(\n",
+    "# print(evaluate_prompt(\n",
     "#     messages=step3_messages,\n",
     "#     activity_name=\"Activity 2.4 Step 3: Inner Monologue\",\n",
     "#     expected_tactics=[\"Inner Monologue\"]\n",
-    "# )\n",
+    "# ))\n",
     "\n",
     "# 🎯 SKILLS YOU CAN CHECK OFF IF BOTH STEPS SCORE >= 80:\n",
     "# ✅ Skill #13: I can create evaluation rubrics with weighted criteria for code assessment\n",
