Enhance Module 2 notebook by adding a hands-on practice section that allows users to apply all eight tactics independently. Included a detailed evaluation system overview, outlining how prompts are scored and providing instant AI-powered feedback. Improved formatting and clarity to facilitate user engagement and understanding of the practice activities.

--- a/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
+++ b/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
@@ -16,8 +16,32 @@
     "| **Goal** | Apply all 8 tactics independently in unguided practice activities. |\n",
     "| **Time** | ~20 minutes |\n",
     "| **Prerequisites** | Complete Sections 2.1–2.4 and understand all 8 core tactics. |\n",
-    "| **Next Steps** | Advance to Module 3: Applications |\n",
+    "| **Next Steps** | Advance to Module 3: Applications |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
+    "<div style=\"padding:12px; background:#dcfce7; border-radius:6px; border-left:4px solid #22c55e; color:#14532d;\">\n",
+    "<strong>⭐ How This Works</strong><br><br>\n",
+    "This section gives you real-world scenarios to solve independently. After you write your prompt, run the evaluation cell to get instant AI-powered feedback on which tactics you successfully applied and which skills you've mastered!\n",
+    "</div>\n",
+    "\n",
+    "**In this section you will:**\n",
+    "- Apply tactics independently without guided hints\n",
+    "- Write complete prompts from scratch\n",
+    "- Get automated feedback using `evaluate_prompt()` function\n",
+    "- Earn skills based on your prompt quality\n",
+    "- Track your progress through all 8 tactics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## 🔧 Quick Setup Check\n",
@@ -47,7 +71,113 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "---\n\n<div style=\"padding:12px; background:#dcfce7; border-radius:6px; border-left:4px solid #22c55e; color:#14532d;\">\n<strong>⭐ How This Works</strong><br><br>\nThis section gives you real-world scenarios to solve independently. After you write your prompt, run the evaluation cell to get instant AI-powered feedback on which tactics you successfully applied and which skills you've mastered!\n</div>\n\n**In this section you will:**\n- Apply tactics independently without guided hints\n- Write complete prompts from scratch\n- Get automated feedback using `evaluate_prompt()` function\n- Earn skills based on your prompt quality\n- Track your progress through all 8 tactics\n\n---\n\n## 🤖 How Your Prompts Are Scored\n\n<div style=\"background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px; border-radius: 10px; text-align: center; margin-bottom: 20px;\">\n<h3 style=\"margin: 0; color: white;\">Evaluation System Overview</h3>\n</div>\n\n<div style=\"background: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 20px;\">\n\n<table style=\"width: 100%; border: none;\">\n<tr>\n<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">1</div>\n</td>\n<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n<strong>Write your prompt</strong> using required tactics\n</td>\n</tr>\n</table>\n\n<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n\n<table style=\"width: 100%; border: none;\">\n<tr>\n<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">2</div>\n</td>\n<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n<strong>Run evaluation</strong> - two methods analyze your work\n</td>\n</tr>\n</table>\n\n<table style=\"width: 100%; margin: 20px 0; border: none;\">\n<tr>\n<td style=\"width: 50%; padding-right: 10px; border: none;\">\n<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-left: 4px solid #f59e0b;\">\n<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #78350f;\">\n📏 Structure Check\n<span style=\"font-size: 13px; font-weight: 600; background: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">40%</span>\n</div>\n<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #78350f;\">\nAutomated checks:<br>\n- System message?<br>\n- XML tags?<br>\n- Role indicators?<br>\n- Examples present?\n</div>\n</div>\n</td>\n<td style=\"width: 50%; padding-left: 10px; border: none;\">\n<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%); border-left: 4px solid #3b82f6;\">\n<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #1e40af;\">\n🤖 Quality Judge\n<span style=\"font-size: 13px; font-weight: 600; background: #3b82f6; color: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">60%</span>\n</div>\n<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #1e40af;\">\nAI evaluates:<br>\n- How well tactics used?<br>\n- Clear & effective?<br>\n- Quality of examples?<br>\n- Overall excellence?\n</div>\n</div>\n</td>\n</tr>\n</table>\n\n<div style=\"background: #f1f5f9; padding: 15px; border-radius: 8px; text-align: center; margin: 20px 0; border: 2px dashed #94a3b8;\">\n<div style=\"font-size: 13px; color: #64748b; margin-bottom: 5px;\">Final Score</div>\n<div style=\"font-family: 'Courier New', monospace; font-size: 16px; font-weight: 600; color: #1e293b;\">\n(Structure × 0.4) + (Quality × 0.6)\n</div>\n</div>\n\n<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n\n<table style=\"width: 100%; border: none;\">\n<tr>\n<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">3</div>\n</td>\n<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n<strong>Get feedback</strong> and improve if needed\n</td>\n</tr>\n</table>\n\n</div>\n\n<div style=\"background: #ecfdf5; border: 2px solid #10b981; padding: 15px; border-radius: 8px; text-align: center; font-size: 18px; font-weight: 700; color: #065f46; margin-bottom: 15px;\">\nPass with score\n<div style=\"font-size: 32px; color: #10b981; margin: 5px 0;\">≥ 80</div>\nto unlock skills!\n</div>\n\n<div style=\"background: #fef3c7; padding: 15px; border-radius: 8px; border-left: 4px solid #f59e0b;\">\n<div style=\"font-weight: 700; color: #78350f; margin-bottom: 5px;\">💡 Quick Tip</div>\n<div style=\"font-size: 14px; color: #78350f;\">\nScore below 80? Read the feedback, adjust your prompt, and try again. Focus on the quality assessment—it shows exactly what to improve!\n</div>\n</div>\n\n---"
+   "source": [
+    "---\n",
+    "\n",
+    "## 🤖 How Your Prompts Are Scored\n",
+    "\n",
+    "<div style=\"background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px; border-radius: 10px; text-align: center; margin-bottom: 20px;\">\n",
+    "<h3 style=\"margin: 0; color: white;\">Evaluation System Overview</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 20px;\">\n",
+    "\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">1</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Write your prompt</strong> using required tactics\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n",
+    "\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">2</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Run evaluation</strong> - two methods analyze your work\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<table style=\"width: 100%; margin: 20px 0; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50%; padding-right: 10px; border: none;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-left: 4px solid #f59e0b;\">\n",
+    "<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #78350f;\">\n",
+    "📏 Structure Check\n",
+    "<span style=\"font-size: 13px; font-weight: 600; background: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">40%</span>\n",
+    "</div>\n",
+    "<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #78350f;\">\n",
+    "Automated checks:<br>\n",
+    "- System message?<br>\n",
+    "- XML tags?<br>\n",
+    "- Role indicators?<br>\n",
+    "- Examples present?\n",
+    "</div>\n",
+    "</div>\n",
+    "</td>\n",
+    "<td style=\"width: 50%; padding-left: 10px; border: none;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%); border-left: 4px solid #3b82f6;\">\n",
+    "<div style=\"font-weight: 700; font-size: 16px; margin-bottom: 8px; color: #1e40af;\">\n",
+    "🤖 Quality Judge\n",
+    "<span style=\"font-size: 13px; font-weight: 600; background: #3b82f6; color: white; padding: 3px 8px; border-radius: 10px; margin-left: 5px;\">60%</span>\n",
+    "</div>\n",
+    "<div style=\"font-size: 13px; line-height: 1.6; margin-top: 10px; color: #1e40af;\">\n",
+    "AI evaluates:<br>\n",
+    "- How well tactics used?<br>\n",
+    "- Clear & effective?<br>\n",
+    "- Quality of examples?<br>\n",
+    "- Overall excellence?\n",
+    "</div>\n",
+    "</div>\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<div style=\"background: #f1f5f9; padding: 15px; border-radius: 8px; text-align: center; margin: 20px 0; border: 2px dashed #94a3b8;\">\n",
+    "<div style=\"font-size: 13px; color: #64748b; margin-bottom: 5px;\">Final Score</div>\n",
+    "<div style=\"font-family: 'Courier New', monospace; font-size: 16px; font-weight: 600; color: #1e293b;\">\n",
+    "(Structure × 0.4) + (Quality × 0.6)\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center; font-size: 24px; color: #667eea; margin: 10px 0;\">↓</div>\n",
+    "\n",
+    "<table style=\"width: 100%; border: none;\">\n",
+    "<tr>\n",
+    "<td style=\"width: 50px; text-align: center; vertical-align: top; border: none;\">\n",
+    "<div style=\"width: 40px; height: 40px; background: #667eea; color: white; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: bold; font-size: 18px;\">3</div>\n",
+    "</td>\n",
+    "<td style=\"padding-left: 10px; font-size: 15px; color: #1e293b; vertical-align: middle; border: none;\">\n",
+    "<strong>Get feedback</strong> and improve if needed\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background: #ecfdf5; border: 2px solid #10b981; padding: 15px; border-radius: 8px; text-align: center; font-size: 18px; font-weight: 700; color: #065f46; margin-bottom: 15px;\">\n",
+    "Pass with score\n",
+    "<div style=\"font-size: 32px; color: #10b981; margin: 5px 0;\">≥ 80</div>\n",
+    "to unlock skills!\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background: #fef3c7; padding: 15px; border-radius: 8px; border-left: 4px solid #f59e0b;\">\n",
+    "<div style=\"font-weight: 700; color: #78350f; margin-bottom: 5px;\">💡 Quick Tip</div>\n",
+    "<div style=\"font-size: 14px; color: #78350f;\">\n",
+    "Score below 80? Read the feedback, adjust your prompt, and try again. Focus on the quality assessment—it shows exactly what to improve!\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
